[package]
name = "ra4m1"
description = "Peripheral access API for ra4m1 microcontrollers (generated using svd2rust)"
version = "0.2.0"
authors = ["Nathan Larsen <n8tlarsen@gmail.com>"]
keywords = ["no-std", "arm", "cortex-m"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ra-rs/ra"
readme = "README.md"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", optional = true }
critical-section = { version = "1.1.2", optional = true }
portable-atomic = { version = "1", default-features = false, optional = true }
vcell = "0.1.3"

[features]
default = ["critical-section", "rt", "atomics"]
atomics = ["dep:portable-atomic"]
rt = ["cortex-m-rt/device"]
